# requestsexceptions

./: .gitignore  .gitreview  .zuul.yaml  README.rst  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
requestsexceptions/: __init__.py
